[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"*" = [
    "py.typed",
    "PyObjC.bridgesupport",
]

[project]
name = "quickmachotkey"
description = "Bind a global hotkey, on macOS, in Python"
readme = "README.rst"
version = "2023.03.04"
dependencies = [
    "pyobjc-core",
]
