[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"*" = [
    "py.typed",
    "PyObjC.bridgesupport",
]

[[tool.mypy.overrides]]
module = "objc.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "AppKit.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "PyObjCTools.*"
ignore_missing_imports = true

[project]
name = "quickmachotkey"
description = "Bind a global hotkey, on macOS, in Python"
readme = "README.rst"
version = "2023.10.26"
dependencies = [
    "pyobjc-core",
]

[project.urls]
"Source Code" = "https://github.com/glyph/QuickMacHotKey"
